--- a/index.html
+++ b/index.html
@@ -57,9 +57,17 @@
    <span style="--i:9">e</span>
    <span style="--i:10">x</span>
 </h1>
+<h1>
+  <img src="Portrait.jpeg">
+</h1>
 
 <h2 id="welcomesubText">Welcome to my website</h2>
+
 </div>
+
+
+
+
 
   
 
