--- a/index.html
+++ b/index.html
@@ -41,39 +41,42 @@
 </nav>
 
 <div class="waviy">
+
 <h1 id="welcomeText">
 
    <span style="--i:1">H</span>
    <span style="--i:2">i</span> 
-   <span style="--i:3">,</span>
+   <span style="--i:3">, </span>
 </h1>
   
-  <h1 id = "welcomeText">
+  <h1 id = "welcomeText2">
    <span style="--i:4">I</span>
    <span style="--i:5">'</span>
    <span style="--i:6">m</span>
-   <span style="--i:7"> A</span>
+   <span style="--i:7">&nbsp;A</span>
    <span style="--i:8">l</span>
    <span style="--i:9">e</span>
    <span style="--i:10">x</span>
 </h1>
 <h1>
-  <img src="Portrait.jpeg">
+ <!-- <img src="Portrait.jpeg">  -->
+  
 </h1>
 
-<h2 id="welcomesubText">Welcome to my website</h2>
+
 
 </div>
 
+<div class = "subText"> 
 
+  <h2 id="welcomesubText">Welcome to my website</h2>
 
-
-
-  
-
+</div>
 
 </body>
 </html>
+
+
 
 
 
