added image and dynamically centered text

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+<link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <html>
 
@@ -23,7 +25,6 @@
 <div id="stars3"></div>
 <div id="title"></div>
 
-    <link rel="stylesheet" href="style.css">
 
 
     
@@ -47,6 +48,7 @@
    <span style="--i:1">H</span>
    <span style="--i:2">i</span> 
    <span style="--i:3">, </span>
+   <img src="Portrait.jpeg"> 
 </h1>
   
   <h1 id = "welcomeText2">
@@ -58,10 +60,7 @@
    <span style="--i:9">e</span>
    <span style="--i:10">x</span>
 </h1>
-<h1>
- <!-- <img src="Portrait.jpeg">  -->
-  
-</h1>
+
 
 
 
@@ -72,6 +71,8 @@
   <h2 id="welcomesubText">Welcome to my website</h2>
 
 </div>
+
+
 
 </body>
 </html>
