--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-<link rel="stylesheet" href="style.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <html>
 
 <head>
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+<link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script defer src = "app.js">  </script>
     <title>
         Alex's Website
         </title>
@@ -24,6 +24,7 @@
 <div id="stars2"></div>
 <div id="stars3"></div>
 <div id="title"></div>
+
 
 
 
@@ -48,9 +49,8 @@
    <span style="--i:1">H</span>
    <span style="--i:2">i</span> 
    <span style="--i:3">, </span>
-   <img src="Portrait.jpeg"> 
-</h1>
-  
+  </h1>
+
   <h1 id = "welcomeText2">
    <span style="--i:4">I</span>
    <span style="--i:5">'</span>
@@ -60,6 +60,8 @@
    <span style="--i:9">e</span>
    <span style="--i:10">x</span>
 </h1>
+
+<img src="Portrait.jpeg"> 
 
 
 
@@ -72,6 +74,47 @@
 
 </div>
 
+
+<section id = "about">
+  <div class = "about hidden">
+    <h1> Hello World </h1>
+  </div>
+</section>
+<section id = "skills"> 
+
+
+</section>
+<section id = "projects"> 
+
+
+</section>
+<section id = "contact"> 
+
+  
+</section>
+
+
+<script type="text/javascript">
+
+  window.addEventListener("scroll",reveal);
+  
+  function reveal() {
+    var reveals = document.querySelectorAll(".reveal");
+  
+    for(var i = 0; i <reveals.length;i++) {
+      var windowheight = window.innerHeight;
+      var revealtop = reveals[i].getBoundingClientRect().top;
+      var revealpoint = 150;
+  
+      if(revealtop < windowheight - revealpoint) {
+        reveals[i].classList.add("active");
+      }
+      else {
+        reveals[i].classList.remove("active");
+      }
+    }
+  }
+  </script>
 
 
 </body>
