aligned flexbox's + added text

--- a/index.html
+++ b/index.html
@@ -81,11 +81,16 @@
     <h1> About Me </h1>
   </div>
 
-  <div class= "flexWrapper">
+  <div class= "flexWrapper noSlide">
 
-      <div id = "flex1"> </div>
-      <div id = "flex2"></div>
-      <div id = "flex3"></div>
+      <p id = "flex1"> Hi, my name is Alexander Levin I am currently a Cybersecurity Major at Northeastern University. 
+        I have always been interested in Cybersecurity at a young age when I would try and hack trivial browser games. 
+        It wasn't until high school where I would take my first Cybersecurity class that I would realize that I would want to pursue a career in Cybersecurity. 
+      </p>
+      <p id = "flex2"> Though I didnt get introduced into Cybersecurity until junior year of high school I found my love for computers when I built my first one when I was 13. I was fascinated by every aspect of my computer, the hardware, the software, all of it.
+        With building my first computer I was introduced to video games which would become a very important passion of mine. I didnt realize how big until I would be trying out and sucuessfully making it on one of the Northeastern Valorant teams where I would be a collegiate e-sports player.
+      </p>
+      <p id = "flex3"> Though computers and video games are very important and special passions of mine, some of my other interests include skiing, web development, travelling, and video editing. </p>
 
   </div>
 
